src/snapshots/zeek_language_server__lsp__test__completion_event-2.snap
---
source: src/lsp.rs
expression: "server.completion(CompletionParams{text_document_position:\n                                       TextDocumentPositionParams{text_document:\n                                                                      TextDocumentIdentifier::new(uri.as_ref().clone()),\n                                                                  position:\n                                                                      Position::new(8,\n                                                                                    10),},\n                                   work_done_progress_params:\n                                       WorkDoneProgressParams::default(),\n                                   partial_result_params:\n                                       PartialResultParams::default(),\n                                   context: None,}).await"
---
Ok(
    Some(
        Array(
            [
                CompletionItem {
                    label: "fct(c: count, s: string) {}",
                    kind: Some(
                        Function,
                    ),
                    detail: None,
                    documentation: Some(
                        MarkupContent(
                            MarkupContent {
                                kind: Markdown,
                                value: "```zeek\nglobal fct: function(c: count, s: string);\n```",
                            },
                        ),
                    ),
                    deprecated: None,
                    preselect: None,
                    sort_text: None,
                    filter_text: None,
                    insert_text: None,
                    insert_text_format: None,
                    insert_text_mode: None,
                    text_edit: None,
                    additional_text_edits: None,
                    command: None,
                    commit_characters: None,
                    data: None,
                    tags: None,
                },
            ],
        ),
    ),
)
