src/snapshots/zeek_language_server__lsp__test__completion_event.snap
---
source: src/lsp.rs
expression: "server.completion(CompletionParams{text_document_position:\n                                       TextDocumentPositionParams{text_document:\n                                                                      TextDocumentIdentifier::new(uri.as_ref().clone()),\n                                                                  position:\n                                                                      Position::new(7,\n                                                                                    6),},\n                                   work_done_progress_params:\n                                       WorkDoneProgressParams::default(),\n                                   partial_result_params:\n                                       PartialResultParams::default(),\n                                   context: None,}).await"
---
Ok(
    Some(
        Array(
            [
                CompletionItem {
                    label: "evt(c: count, s: string) {}",
                    kind: Some(
                        Event,
                    ),
                    detail: None,
                    documentation: Some(
                        MarkupContent(
                            MarkupContent {
                                kind: Markdown,
                                value: "```zeek\nglobal evt: event(c: count, s: string);\n```",
                            },
                        ),
                    ),
                    deprecated: None,
                    preselect: None,
                    sort_text: None,
                    filter_text: None,
                    insert_text: None,
                    insert_text_format: None,
                    insert_text_mode: None,
                    text_edit: None,
                    additional_text_edits: None,
                    command: None,
                    commit_characters: None,
                    data: None,
                    tags: None,
                },
            ],
        ),
    ),
)
