src/snapshots/zeek_language_server__lsp__test__completion_field.snap
---
source: src/lsp.rs
expression: "server.completion(CompletionParams { context: None, ..params.clone() }).await"
---
Ok(
    Some(
        Array(
            [
                CompletionItem {
                    label: "abc",
                    kind: Some(
                        Field,
                    ),
                    detail: None,
                    documentation: Some(
                        MarkupContent(
                            MarkupContent {
                                kind: Markdown,
                                value: "```zeek\n# In X\nabc: count;\n```",
                            },
                        ),
                    ),
                    deprecated: None,
                    preselect: None,
                    sort_text: None,
                    filter_text: None,
                    insert_text: None,
                    insert_text_format: None,
                    insert_text_mode: None,
                    text_edit: None,
                    additional_text_edits: None,
                    command: None,
                    commit_characters: None,
                    data: None,
                    tags: None,
                },
            ],
        ),
    ),
)
