src/snapshots/zeek_language_server__lsp__test__document_symbol.snap
---
source: src/lsp.rs
assertion_line: 3186
expression: "server.document_symbol(DocumentSymbolParams\n{\n    text_document: TextDocumentIdentifier::new(uri),\n    work_done_progress_params: WorkDoneProgressParams::default(),\n    partial_result_params: PartialResultParams::default(),\n}).await"
---
Ok(
    Some(
        Nested(
            [
                DocumentSymbol {
                    name: "foo",
                    detail: None,
                    kind: Namespace,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 4,
                            character: 12,
                        },
                        end: Position {
                            line: 4,
                            character: 28,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 4,
                            character: 12,
                        },
                        end: Position {
                            line: 4,
                            character: 28,
                        },
                    },
                    children: Some(
                        [
                            DocumentSymbol {
                                name: "y",
                                detail: None,
                                kind: Variable,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 4,
                                        character: 12,
                                    },
                                    end: Position {
                                        line: 4,
                                        character: 28,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 4,
                                        character: 19,
                                    },
                                    end: Position {
                                        line: 4,
                                        character: 20,
                                    },
                                },
                                children: None,
                            },
                        ],
                    ),
                },
                DocumentSymbol {
                    name: "bar",
                    detail: None,
                    kind: Namespace,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 7,
                            character: 12,
                        },
                        end: Position {
                            line: 7,
                            character: 25,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 7,
                            character: 12,
                        },
                        end: Position {
                            line: 7,
                            character: 25,
                        },
                    },
                    children: Some(
                        [
                            DocumentSymbol {
                                name: "z",
                                detail: None,
                                kind: Variable,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 7,
                                        character: 12,
                                    },
                                    end: Position {
                                        line: 7,
                                        character: 25,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 7,
                                        character: 19,
                                    },
                                    end: Position {
                                        line: 7,
                                        character: 20,
                                    },
                                },
                                children: None,
                            },
                        ],
                    ),
                },
                DocumentSymbol {
                    name: "foo",
                    detail: None,
                    kind: Namespace,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 10,
                            character: 12,
                        },
                        end: Position {
                            line: 10,
                            character: 25,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 10,
                            character: 12,
                        },
                        end: Position {
                            line: 10,
                            character: 25,
                        },
                    },
                    children: Some(
                        [
                            DocumentSymbol {
                                name: "w",
                                detail: None,
                                kind: Variable,
                                tags: None,
                                deprecated: None,
                                range: Range {
                                    start: Position {
                                        line: 10,
                                        character: 12,
                                    },
                                    end: Position {
                                        line: 10,
                                        character: 25,
                                    },
                                },
                                selection_range: Range {
                                    start: Position {
                                        line: 10,
                                        character: 19,
                                    },
                                    end: Position {
                                        line: 10,
                                        character: 20,
                                    },
                                },
                                children: None,
                            },
                        ],
                    ),
                },
                DocumentSymbol {
                    name: "x",
                    detail: None,
                    kind: Variable,
                    tags: None,
                    deprecated: None,
                    range: Range {
                        start: Position {
                            line: 1,
                            character: 12,
                        },
                        end: Position {
                            line: 1,
                            character: 26,
                        },
                    },
                    selection_range: Range {
                        start: Position {
                            line: 1,
                            character: 19,
                        },
                        end: Position {
                            line: 1,
                            character: 20,
                        },
                    },
                    children: None,
                },
            ],
        ),
    ),
)
