src/snapshots/zeek_language_server__lsp__test__goto_declaration-2.snap
---
source: src/lsp.rs
expression: "server.goto_declaration(super::GotoDefinitionParams\n{\n    text_document_position_params:\n    TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri),\n    Position::new(4, 8),), partial_result_params:\n    PartialResultParams::default(), work_done_progress_params:\n    WorkDoneProgressParams::default(),\n}).await"
---
Ok(
    Some(
        Scalar(
            Location {
                uri: Uri(
                    Uri {
                        scheme: "file",
                        authority: Some(
                            Authority {
                                userinfo: None,
                                host: "",
                                host_parsed: RegName(
                                    "",
                                ),
                                port: None,
                            },
                        ),
                        path: "/events.bif.zeek",
                        query: None,
                        fragment: None,
                    },
                ),
                range: Range {
                    start: Position {
                        line: 0,
                        character: 0,
                    },
                    end: Position {
                        line: 0,
                        character: 26,
                    },
                },
            },
        ),
    ),
)
