src/snapshots/zeek_language_server__lsp__test__goto_definition-2.snap
---
source: src/lsp.rs
expression: "server.goto_declaration(super::GotoDefinitionParams {\n            text_document_position_params: TextDocumentPositionParams::new(TextDocumentIdentifier::new(uri.as_ref().clone()),\n                Position::new(4, 8)),\n            partial_result_params: PartialResultParams::default(),\n            work_done_progress_params: WorkDoneProgressParams::default(),\n        }).await"
---
Ok(
    Some(
        Scalar(
            Location {
                uri: Url {
                    scheme: "file",
                    cannot_be_a_base: false,
                    username: "",
                    password: None,
                    host: None,
                    port: None,
                    path: "/events.bif.zeek",
                    query: None,
                    fragment: None,
                },
                range: Range {
                    start: Position {
                        line: 0,
                        character: 0,
                    },
                    end: Position {
                        line: 0,
                        character: 26,
                    },
                },
            },
        ),
    ),
)
